adding opengpg workflow and module along with FIDO2 manual interactions via the webauthn interceptor bookmarklet
